--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1330,3 +1330,64 @@ a {
     border-radius: 8px; /* Optional: Add some rounded corners */
     
 }
+
+/*Marquee Start*/
+.demo-marquee {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+
+.marquee-container {
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: auto;
+    align-items: center;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    background: linear-gradient(to right, var(--gradient-color));
+    z-index: 1;
+}
+
+.marquee {
+    display: flex;
+    animation: scroll var(--duration) linear infinite;
+    animation-play-state: var(--play);
+    flex-wrap: nowrap;
+    position: relative;
+    z-index: 2;
+}
+
+.initial-child-container {
+    display: flex;
+}
+
+.child {
+    flex-shrink: 0;
+    margin: 0;
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+.child img {
+    display: block;
+    max-height: 100%;
+    max-width: 100%;
+}
+/*Marquee End*/
