--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -395,211 +395,48 @@ a {
 
 
 /*** Navbar ***/
-.navbar-light .navbar-nav .nav-link {
-    font-family: 'Poppins', sans-serif;
-    position: relative;
-    margin-right: 25px;
-    padding: 35px 0;
-    color: var(--bs-primary) !important;
-    font-size: 17px;
-    font-weight: 400;
-    outline: none;
-    transition: .5s;
-}
-
-.sticky-top .navbar-light .navbar-nav .nav-link {
-    padding: 20px 0;
-    color: var(--bs-primary) !important;
-}
-
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
-    color: var(--bs-secondary) !important;
-}
-
-.navbar-light .navbar-brand img {
-    max-height: 60px;
-    transition: .5s;
-}
-
-.sticky-top .navbar-light .navbar-brand img {
-    max-height: 45px;
-}
-
-.navbar .dropdown-toggle::after {
-    border: none;
-    content: "\f107";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 600;
-    vertical-align: middle;
-}
-
-@media (min-width: 1200px) {
-    .navbar .nav-item .dropdown-menu {
-        display: block;
-        visibility: hidden;
-        top: 100%;
-        transform: rotateX(-75deg);
-        transform-origin: 0% 0%;
-        border: 0;
-        border-radius: 10px;
-        transition: .5s;
-        opacity: 0;
-    }
-}
-
-.dropdown .dropdown-menu a:hover {
-    background: var(--bs-primary);
-    color: var(--bs-secondary);
-}
-
-.navbar .nav-item:hover .dropdown-menu {
-    transform: rotateX(0deg);
-    visibility: visible;
-    background: var(--bs-light) !important;
-    transition: .5s;
-    opacity: 1;
-}
-
+/* For the navbar items to stack vertically on small screens */
 @media (max-width: 991.98px) {
-    .sticky-top {
-        position: relative;
-        background: var(--bs-white);
-    }
-
-    .navbar.navbar-expand-lg .navbar-toggler {
-        padding: 10px 20px;
-        border: 1px solid var(--bs-primary) !important;
-        color: var(--bs-primary);
-    }
-
-    .navbar-light .navbar-collapse {
-        margin-top: 15px;
-        border-top: 1px solid #DDDDDD;
-    }
-
-    .navbar-light .navbar-nav .nav-link,
-    .sticky-top .navbar-light .navbar-nav .nav-link {
-        padding: 10px 0;
-        margin-left: 0;
-        color: var(--bs-dark) !important;
-    }
-
-    .navbar-light .navbar-brand img {
-        max-height: 45px;
-    }
-}
-
-@media (min-width: 991.98px) {
-    .sticky-top .navbar-light {
-        background: var(--bs-light) !important;
-    }
-
-    /*** Top and Bottom borders go out ***/
-    .navbar-light .navbar-nav .nav-link:after,
-    .navbar-light .navbar-nav .nav-link::before {
-        position: absolute;
-        content: "";
-        top: 30px;
-        bottom: 30px;
-        left: 0px;
+    .navbar-nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 100%;
-        height: 2px;
-        background: var(--bs-primary);
-        opacity: 0;
-        transition: all 0.5s;
     }
 
-    .navbar-light .navbar-nav .nav-link:before {
-        bottom: auto;
+        .navbar-nav .nav-link {
+            width: 100%;
+            text-align: center;
+            padding: 10px 0;
+            margin: 0;
+        }
+
+    .navbar-toggler {
+        display: flex;
     }
 
-    .navbar-light .navbar-nav .nav-link:after {
-        top: auto;
+        .navbar-toggler.open .bar:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        .navbar-toggler.open .bar:nth-child(2) {
+            opacity: 0;
+        }
+
+        .navbar-toggler.open .bar:nth-child(3) {
+            transform: rotate(-45deg) translate(5px, -5px);
+        }
+
+    .dropdown-item {
+        padding: 10px;
+        text-align: center;
     }
 
-    .navbar-light .navbar-nav .nav-link:hover:before,
-    .navbar-light .navbar-nav .nav-link.active:before {
-        top: 20px;
-        opacity: 1;
-    }
-
-    .navbar-light .navbar-nav .nav-link:hover::after,
-    .navbar-light .navbar-nav .nav-link.active::after {
-        bottom: 20px;
-        opacity: 1;
-    }
+        .dropdown-item:hover {
+            background-color: var(--bs-light);
+            color: var(--bs-primary);
+        }
 }
-
-#searchModal .modal-content {
-    background: rgba(240, 245, 251, 0.5);
-}
-
-/* Navbar container */
-.navbar-toggler {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background: transparent;
-    border: 1px solid var(--bs-primary);
-    border-radius: 50%;
-    transition: all 0.3s ease;
-}
-
-    .navbar-toggler:hover {
-        background-color: var(--bs-light);
-    }
-
-/* Hamburger bars */
-.bar {
-    width: 24px;
-    height: 3px;
-    background-color: var(--bs-primary);
-    border-radius: 3px;
-    transition: all 0.3s ease;
-}
-
-/* Open menu styling */
-.navbar-toggler.open .bar:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
-}
-
-.navbar-toggler.open .bar:nth-child(2) {
-    opacity: 0;
-}
-
-.navbar-toggler.open .bar:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
-}
-
-/* Responsive menu styles */
-.nav-link {
-    display: block;
-    color: var(--bs-dark);
-    padding: 10px 15px;
-    text-decoration: none;
-    font-weight: 500;
-    transition: all 0.3s ease;
-}
-
-    .nav-link:hover {
-        color: var(--bs-primary);
-    }
-
-.dropdown-item {
-    padding: 10px;
-    color: var(--bs-dark);
-    text-decoration: none;
-    transition: all 0.3s ease;
-}
-
-    .dropdown-item:hover {
-        background-color: var(--bs-light);
-        color: var(--bs-primary);
-    }
 
 /* Mobile menu styles */
 @media (max-width: 1024px) {
@@ -608,6 +445,10 @@ a {
     }
 
     .nav-link {
+        display: block;
+        width: 100%; /* Make each link take full width */
+        padding: 15px 0; /* Adjust padding for better spacing */
+        text-align: center; /* Center the text */
         border-bottom: 1px solid #ddd;
     }
 
@@ -620,6 +461,19 @@ a {
             border-bottom: none;
         }
 }
+
+/* Make sure menu is stacked vertically */
+.navbar .navbar-nav {
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
+    align-items: center; /* Center align items */
+}
+
+    .navbar .navbar-nav .nav-link {
+        width: 100%; /* Ensure the nav links span the full width */
+        padding: 15px; /* Increase padding for better click areas */
+        text-align: center; /* Center text in each nav item */
+    }
 
 /*** Navbar End ***/
 
@@ -747,7 +601,7 @@ a {
 /* Apply animation initially */
 .animate-fade-in {
     opacity: 0; /* Start with the element hidden */
-    transform: translateY(20px); /* Slightly translate the element */
+    transform: translateY(50px); /* Slightly translate the element */
     animation: fadeIn 1s ease-out forwards;
 }
 
@@ -1494,3 +1348,19 @@ a {
     font-weight: bold;
 }
 /*Coaching End*/
+
+/*Link Transition Start*/
+body {
+    transition-property: opacity, transform, filter, background;
+    transition-timing-function: ease-in-out;
+    transition-duration: 300ms;
+}
+
+.page-transition {
+    opacity: 0;
+    background-image: url('/img/rsz_11rsz_solid256griddiagonal1_32_black.png');
+    background-repeat: repeat;
+    transform: translateY(40px);
+    filter: blur(12px);
+}
+/*Link Transition End*/
