logo and form updated

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -480,7 +480,7 @@ a {
 .bg-breadcrumb {
     background: linear-gradient(rgba(0, 58, 102, 0.9), rgba(0, 58, 102, 0.8));
     background-position: center center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-attachment: initial;
     background-size: cover;
     padding: 100px 0 60px 0;
